--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
 .obsidian
 .direnv
 result
+
+# Professor left in mac specific artifacts
+.DS_store
+__MACOX
+
+# Haskell files
+dist
+dist-*
+cabal-dev
+*.o
+*.hi
+*.hie
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
